--- a/index.html
+++ b/index.html
@@ -690,7 +690,22 @@
         </p>
     </div>
 
- 
+    <!-- google add start-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+        crossorigin="anonymous"></script>
+    <!-- sfs vertical -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!-- google add end-->
+
+
+    <!-- auto ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+    crossorigin="anonymous"></script>
+
 </div>
   </div>
   <p class="rss-subscribe">subscribe <a href="/%20/feed.xml">via RSS</a></p></div>
