--- a/index.html
+++ b/index.html
@@ -658,55 +658,93 @@
         </li></ul>
     </div>
     <div class="col-sm-3 p-2 border">
-      Sponsored content
-    <!--ads etc here -->
-    <!-- streamlit from scratch-->
-    <div class="p-4 shadow-sm mb-4 rounded border border-secondary bg-light"  
-         style="background-image: url('https://github.com/alanjones2/streamlitfromscratch/blob/main/sfsimage.png?raw=true');background-size: cover;">
-        <div>
-            <i>eBook</i>
-            <img class="mr-3" src="" width='80%' height='auto' alt="">
-            <h2>
-                <a href="https://alanjones2.github.io/streamlitfromscratch/" target="_blank">
-                    <span  style="color:navy" >Streamlit from Scratch</span>
-                </a>
-            </h2>
-            <p class="lead" style="color: navy;"><b>Streamlit</b> is a framework for creating Data Science apps in Python.
-                <br />
-                <b>Streamlit from Scratch</b> will take from building a simple we page through to creating fully functional interactive data dashboards.
-            </p>
-
-        </div>
-    </div>
-    <div class="p-4 shadow-sm mb-4 rounded border border-secondary bg-light">
-
+      Sponsored content<!--ads etc here -->
+<!-- streamlit from scratch-->
+<div class="p-4 shadow-sm mb-4 rounded border border-secondary bg-light"
+    style="background-image: url('https://github.com/alanjones2/streamlitfromscratch/blob/main/sfsimage.png?raw=true');background-size: cover;">
+    <div>
         <i>eBook</i>
-        <h2><a href='https://alanjones.gumroad.com/l/auiws' target='_blank'><span  style="color:navy" >Plotting with Pandas</span></a>
+        <img class="mr-3" src="" width='80%' height='auto' alt="">
+        <h2>
+            <a href="https://alanjones2.github.io/streamlitfromscratch/" target="_blank">
+                <span style="color:navy">Streamlit from Scratch</span>
+            </a>
         </h2>
-        <p class="lead" style="color: navy;">
-            <b>Plotting with Pandas: an Introduction to Data Visualization</b> is an ebook that covers basic and
-            statistical plots using Python and Pandas, line and bar charts, scatter plots, pie charts,
-            histograms, box plots, etc.
+        <p class="lead" style="color: navy;"><b>Streamlit</b> is a framework for creating Data Science apps in Python.
+            <br />
+            <b>Streamlit from Scratch</b> will take from building a simple we page through to creating fully functional
+            interactive data dashboards.
         </p>
+
     </div>
-
-    <!-- google add start-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
-        crossorigin="anonymous"></script>
-    <!-- sfs vertical -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <!-- google add end-->
-
-
-    <!-- auto ads-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
-    crossorigin="anonymous"></script>
-
 </div>
+<div class="p-4 shadow-sm mb-4 rounded border border-secondary bg-light">
+
+    <i>eBook</i>
+    <h2><a href='https://alanjones.gumroad.com/l/auiws' target='_blank'><span style="color:navy">Plotting with
+                Pandas</span></a>
+    </h2>
+    <p class="lead" style="color: navy;">
+        <b>Plotting with Pandas: an Introduction to Data Visualization</b> is an ebook that covers basic and
+        statistical plots using Python and Pandas, line and bar charts, scatter plots, pie charts,
+        histograms, box plots, etc.
+    </p>
+</div>
+
+<!-- google add start-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+    crossorigin="anonymous"></script>
+<!-- sfs vertical -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- google add end-->
+
+<!-- google add start-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+    crossorigin="anonymous"></script>
+<!-- sfs vertical -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- google add end-->
+
+<!-- google add start-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+    crossorigin="anonymous"></script>
+<!-- sfs vertical -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- google add end-->
+
+<!-- google add start-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+    crossorigin="anonymous"></script>
+<!-- sfs vertical -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- google add end-->
+
+<!-- google add start-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
+    crossorigin="anonymous"></script>
+<!-- sfs vertical -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959" data-ad-slot="6617299104"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- google add end--></div>
   </div>
   <p class="rss-subscribe">subscribe <a href="/%20/feed.xml">via RSS</a></p></div>
       </div>
