--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <img src="https://github.com/alanjones2/mesopapps/blob/main/CO2/images/front.png?raw=true" height='auto' alt="">
             </div>
             <div class="col-sm-9">
-              For the time being new articles will be published on my Substack - you can subscribe for free, to be emailed articles or just follow me if you a a substack subscriber.
+              For the time being, new articles will be published on my Substack - you can subscribe for free, to be emailed articles or just follow me if you a substack subscriber.
             </div>
           </div>
         </a>
