--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
   
   <link rel="stylesheet" href="/assets/main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Data Visualization, Data Science and AI" /></head>
-<body class="container" style="background-color:ghostwhite;"><header><!--</header> class="site-header" role="banner" style="background-color: white">-->
-  <div class="wrapper mb-2"><a class="site-title" style="font-size: larger;" rel="author" href="https://datavizandai.github.io">Data Visualization, Data Science and AI</a>
-    <a class="site-nav" rel="author" href="/about">About</a>
-  </div>
+<body class="container" style="background-color:ghostwhite;"><header class="site-header mb-4" role="banner" style="background-color: white">
+  <div><!--</div> class="wrapper mb-2">--><a class="" style="text-decoration:none;font-size: larger;" rel="author" href="https://datavizandai.github.io"><!--Data Visualization, Data Science and AI</a>-->
+      <div class="p-4" style="background-image: url('/assets/images/bg.png');color:white;opacity:0.8">
+  <h1 >Data Visualization, Data Science and AI
+    <span style="font-size:25%;font-weight:lighter">by&nbsp; </span> 
+    <span class="text-secondary" style="font-size:50%;font-weight: bolder;"> Alan
+        <span style="font-weight:lighter">Jones</span>
+    </span>
+</h1>
+
+<p style="font-size:90%">Data Visualization and AI apps for the web using Streamlit, Plotly, Python and Flask. See the articles/tutorials, below - many have the example code on Github.</p>
+</div>      
+<!--<a class="site-nav" rel="author" href="/about">About</a>-->
+
+    </a>
 </header><main class="container" aria-label="Content">
       <div >
-        <div class="home"><div class="p-4 mb-4" style="background-image: url('/assets/images/bg.png');color:white">
-  <h1>Data Visualization, Data Science and AI
+        <div class="home"><!--
+<div class="p-4 mb-4" style="background-image: url('/assets/images/bg.png');color:white">
+  <h1 >Data Visualization, Data Science and AI
     <span style="font-size:25%;font-weight:lighter">by </span> 
     <span class="text-secondary" style="font-size:50%;font-weight: bolder;"> Alan
         <span style="font-weight:lighter">Jones</span>
     </span>
 </h1>
-<hr />
+<hr/>
 <p>Data Visualization and AI apps for the web using Streamlit, Plotly, Python and Flask. See the articles/tutorials, below - many have the example code on Github.</p>
-</div>
+</div>  
+-->
 
   <div class="row">
     <div class="col-sm-8 p-2"><p class="lead">Articles</p>
